# ytui

./: README.md  pyproject.toml
ytui/: app.py  models.py  parser.py  queue.py  runner.py
ytui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ytui/widgets/: format_list.py  progress.py  status_bar.py
