[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytui"
version = "0.1.0"
description = "A production-ready TUI wrapper for yt-dlp using Textual"
readme = "README.md"
authors = [{ name = "Gemini CLI" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "textual>=0.86.0",
    "rich>=13.9.0",
]

[project.scripts]
ytui = "ytui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ytui*"]
